Fix unlikely-arg-type Eclipse warning, adopt String.repeat and .blank